src/objects/Invasive_Tumor_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Anterior_Inferior_Size__c</fullName>
        <label>Anterior/Inferior Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anterior_Inferior__c</fullName>
        <label>Anterior/Inferior</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Anterior_Superior_Size__c</fullName>
        <label>Anterior/Superior Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anterior_Superior__c</fullName>
        <label>Anterior/Superior</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Anterios_Superior_Size__c</fullName>
        <label>Anterios/Superior Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calcifications_Present__c</fullName>
        <label>Calcifications Present</label>
        <picklist>
            <controllingField>Calcifications__c</controllingField>
            <picklistValues>
                <fullName>Benign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invasive &amp; Benign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invasive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Calcifications__c</fullName>
        <label>Calcifications</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closest_Margin__c</fullName>
        <label>Closest Margin</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;1mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;1cm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not reported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specifiy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deep_Margin_Size__c</fullName>
        <label>Deep Margin Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deep_Margin__c</fullName>
        <label>Deep Margin</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Derma_lymphatic_vascular_invasion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Derma lymphatic vascular invasion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dermal_Involvement__c</fullName>
        <label>Dermal Involvement</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspicious</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not reported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No skin / nipple present</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evidence_of_therapeutic_effects__c</fullName>
        <label>Evidence of therapeutic effects</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Histology__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Histology</label>
        <referenceTo>Histology__c</referenceTo>
        <relationshipLabel>Invasive Tumor Details</relationshipLabel>
        <relationshipName>Invasive_Tumor_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invasive_carcinoma_mixed_ductal_lobular__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Invasive carcinoma mixed ductal and lobular type</inlineHelpText>
        <label>Invasive carcinoma mixed ductal &amp; lobula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invasive_cribiform_carcinoma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invasive cribiform carcinoma</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invasive_ductal_carcinoma_nos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invasive ductal carcinoma nos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invasive_lobular_carcinoma_alveolar_type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invasive lobular carcinoma alveolar type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invasive_lobular_carcinoma_classic_type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invasive lobular carcinoma classic type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invasive_margins__c</fullName>
        <label>Invasive margins</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invasive_margins_size__c</fullName>
        <label>Invasive margins size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invasive_papillary_carcinoma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invasive papillary carcinoma</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lateral_Size__c</fullName>
        <label>Lateral Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lateral__c</fullName>
        <label>Lateral</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lympatic_vascular_Invasion__c</fullName>
        <label>Lympatic-vascular Invasion</label>
        <picklist>
            <picklistValues>
                <fullName>Present</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medical_Size__c</fullName>
        <label>Medical Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medical__c</fullName>
        <label>Medical</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medullary_carcinoma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medullary carcinoma</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mitotic_Count__c</fullName>
        <label>Mitotic Count</label>
        <picklist>
            <picklistValues>
                <fullName>1pt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2pt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3pt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indeterminate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mucinous_carcinoma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mucinous carcinoma</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multi_focal_Tumor__c</fullName>
        <label>Multi-focal Tumor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Muscle_involvement__c</fullName>
        <label>Muscle involvement</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nuclear_Grade__c</fullName>
        <label>Nuclear Grade</label>
        <picklist>
            <picklistValues>
                <fullName>Grade I (low)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade II (Intermediate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade III (high)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indeterminate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>On_Study_Pathology_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>On-Study Pathology Form</label>
        <referenceTo>On_Study_Pathology_Form__c</referenceTo>
        <relationshipLabel>Invasive Tumor Details</relationshipLabel>
        <relationshipName>Invasive_Tumor_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_changes_present__c</fullName>
        <label>Other changes present</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_if_other_mention_type_in_textbox__c</fullName>
        <label>Other(if other, mention type in textbox)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_cancer_cellularity__c</fullName>
        <label>Overall cancer cellularity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paget_disease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paget disease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pleomorphic_lobular_carcinoma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pleomorphic lobular carcinoma</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Surgery_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post Surgery Summary</label>
        <referenceTo>Post_Surgaory_Summary__c</referenceTo>
        <relationshipLabel>Invasive Tumor Details</relationshipLabel>
        <relationshipName>Invasive_Tumor_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBR_Grade__c</fullName>
        <label>SBR Grade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signs_of_Treatment_Effect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signs of Treatment Effect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skin_Involvement__c</fullName>
        <label>Skin Involvement</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspicious</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not reported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No skin / nipple present</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specify_No__c</fullName>
        <label>Specify No</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specify_Units__c</fullName>
        <label>Specify Units</label>
        <picklist>
            <controllingField>Closest_Margin__c</controllingField>
            <picklistValues>
                <fullName>CM</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>MM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Points__c</fullName>
        <label>Total Points</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tubular_carcinoma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tubular carcinoma</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tubule_Papilla_formation__c</fullName>
        <label>Tubule/Papilla formation</label>
        <picklist>
            <picklistValues>
                <fullName>1pt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2pt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3pt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indeterminate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tubulolobular_carcinoma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tubulolobular carcinoma</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tumor_Measurement_Unit__c</fullName>
        <label>Tumor Measurement Unit</label>
        <picklist>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tumor_Size_Height__c</fullName>
        <label>Tumor Size Height</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tumor_Size_Width__c</fullName>
        <label>Tumor Size Width</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tumor_Size__c</fullName>
        <label>Tumor Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ulceration_by_tumor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ulceration by tumor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unknown_Not_Reported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unknown/Not Reported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pg_InvasiveTumor_Id__c</fullName>
        <label>pg_InvasiveTumor_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Invasive Tumor Detail</label>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invasive Tumor Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>